--- a/MasterOfMissingStuff/app/src/main/res/layout/item.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,27 +8,36 @@
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="195dp"
-        android:layout_height="182dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="7dp"
+        android:contentDescription="@string/locate_item"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:srcCompat="@drawable/placeholder"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="244dp" />
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="sans-serif-light"
         android:text="Item name"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="202dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintStart_toStartOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="188dp"
-        android:layout_height="47dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="37dp"
         android:background="#8A6262"
         android:fontFamily="sans-serif-light"
         android:text="Locate item"
@@ -41,21 +49,29 @@
         app:iconPadding="0dp"
         app:iconTint="#FFFFFF"
         app:iconTintMode="multiply"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="433dp" />
+        app:layout_constraintBottom_toTopOf="@+id/switch1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        tools:ignore="TextContrastCheck" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="219dp"
-        android:layout_height="129dp"
-        app:srcCompat="@drawable/momslogo"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="59dp" />
+        android:layout_height="0dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginBottom="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/momslogo" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="138dp"
-        android:layout_height="39dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="84dp"
         android:background="#8A6262"
         android:fontFamily="sans-serif-light"
         android:text="Remove"
@@ -67,27 +83,34 @@
         app:iconPadding="0dp"
         app:iconTint="#FFFFFF"
         app:iconTintMode="multiply"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="608dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch2" />
 
     <Switch
         android:id="@+id/switch2"
         android:layout_width="121dp"
-        android:layout_height="42dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="7dp"
         android:fontFamily="sans-serif-light"
         android:text="Track"
-        android:textSize="18"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="559dp" />
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch1" />
 
     <Switch
         android:id="@+id/switch1"
         android:layout_width="121dp"
-        android:layout_height="42dp"
+        android:layout_height="0dp"
         android:fontFamily="sans-serif-light"
         android:text="Lock"
-        android:textSize="18"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="517dp" />
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/switch2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
