--- a/MasterOfMissingStuff/app/src/main/res/layout/item.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/item.xml
@@ -6,13 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="62dp"
+        android:layout_height="60dp"
+        android:background="#A5A4A4"
+        android:fontFamily="sans-serif-light"
+        android:rotation="-180"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        app:backgroundTint="#A5A4A4"
+        app:cornerRadius="30dp"
+        app:icon="@drawable/rightarrow"
+        app:iconPadding="2"
+        app:iconTint="#FFFFFF"
+        app:iconTintMode="multiply"
+        app:rippleColor="#FFFFFF"
+        tools:layout_editor_absoluteX="174dp"
+        tools:layout_editor_absoluteY="615dp" />
+
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="195dp"
-        android:layout_height="182dp"
+        android:layout_width="137dp"
+        android:layout_height="138dp"
         app:srcCompat="@drawable/placeholder"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="244dp" />
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="247dp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -42,7 +62,7 @@
         app:iconTint="#FFFFFF"
         app:iconTintMode="multiply"
         tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="433dp" />
+        tools:layout_editor_absoluteY="396dp" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -68,17 +88,7 @@
         app:iconTint="#FFFFFF"
         app:iconTintMode="multiply"
         tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="608dp" />
-
-    <Switch
-        android:id="@+id/switch2"
-        android:layout_width="121dp"
-        android:layout_height="42dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Track"
-        android:textSize="18"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="559dp" />
+        tools:layout_editor_absoluteY="558dp" />
 
     <Switch
         android:id="@+id/switch1"
@@ -88,6 +98,16 @@
         android:text="Lock"
         android:textSize="18"
         tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="517dp" />
+        tools:layout_editor_absoluteY="467dp" />
+
+    <Switch
+        android:id="@+id/switch2"
+        android:layout_width="121dp"
+        android:layout_height="42dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Track"
+        android:textSize="18"
+        tools:layout_editor_absoluteX="145dp"
+        tools:layout_editor_absoluteY="509dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
