--- a/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
@@ -6,6 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="62dp"
+        android:layout_height="60dp"
+        android:background="#A5A4A4"
+        android:fontFamily="sans-serif-light"
+        android:rotation="-180"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        app:backgroundTint="#A5A4A4"
+        app:cornerRadius="30dp"
+        app:icon="@drawable/rightarrow"
+        app:iconPadding="2"
+        app:iconTint="#FFFFFF"
+        app:iconTintMode="multiply"
+        app:rippleColor="#FFFFFF"
+        tools:layout_editor_absoluteX="174dp"
+        tools:layout_editor_absoluteY="588dp" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="219dp"
@@ -43,33 +63,7 @@
         android:textColor="#000000"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="307dp" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="103dp"
-        android:layout_height="102dp"
-        app:srcCompat="@drawable/placeholder"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="487dp" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="103dp"
-        android:layout_height="102dp"
-        app:srcCompat="@drawable/placeholder"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="367dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:text="Item 1"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="198dp"
-        tools:layout_editor_absoluteY="402dp" />
+        tools:layout_editor_absoluteY="288dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -79,6 +73,32 @@
         android:text="Item 2"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="198dp"
-        tools:layout_editor_absoluteY="512dp" />
+        tools:layout_editor_absoluteY="477dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:text="Item 1"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteX="198dp"
+        tools:layout_editor_absoluteY="367dp" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        app:srcCompat="@drawable/placeholder"
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="452dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        app:srcCompat="@drawable/placeholder"
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="332dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
